Mon May 24 23:04:41 2010  Tanaka Akira  <akr@fsij.org>

	* error.c: fix wrong exception class name in rdoc.

Sat May 29 13:55:22 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_filesystem_encindex): avoid infinite require
	  loop. [ruby-core:30467]

Sat May 29 12:05:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/rdoc.rb (RDoc#read_file_contents): take care of BOM.
	  [ruby-dev:41452]

Sat May 29 09:34:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb: fix for --disable-gems.

Fri May 28 18:39:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_inspect): escape ASCII-compatible strings.

	* string.c (rb_str_inspect): escape ASCII-compatible strings.

Fri May 28 17:34:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_product): Use tmpary instead, to ensure marking
	  arrays by GC.

Fri May 28 11:58:42 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_product): Do not rely on GC, t0 should be
	  checked explicitly.

Fri May 28 10:40:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (checking_for): ignore toplevel.

Fri May 28 00:47:16 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* error.c (rb_bug): suppress the error report dialog if report_bug() 
	  is finished successfly.

Thu May 27 23:52:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/encoding.h (rb_filesystem_encindex): defined.

	* include/ruby/encoding.h (rb_locale_encindex): ditto.

	* encoding.c (rb_filesystem_encindex): remove static.

	* encoding.c (rb_locale_encindex): ditto.

Thu May 27 23:51:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (rb_home_dir): set filesystem encoding.

Thu May 27 23:51:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): set encoding as the same of fname
	  when _result_ is not filesystem encoding. [ruby-dev:41429]

Thu May 27 23:51:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>
