@@ -1,3 +1,7 @@
+Wed May 26 11:50:09 2010  Eric Hodel  <drbrain@segment7.net>
+
+	* marshal.c (Init_marshal): document marshal_dump and marshal_load.
+
 Mon May 24 23:04:41 2010  Tanaka Akira  <akr@fsij.org>
 
 	* error.c: fix wrong exception class name in rdoc.
